--- a/4.ANSIBLE/1.PLAYBOOK_APPLY/12.playbook_apply_cluster.yaml
+++ b/4.ANSIBLE/1.PLAYBOOK_APPLY/12.playbook_apply_cluster.yaml
@@ -10,6 +10,14 @@
 
   tasks:
 
+    - name: Install Kubernetes Collection
+      shell: |
+        pip install kubernetes
+
+    - name: Install Helm Collection
+      shell: |
+        ansible-galaxy collection install community.kubernetes
+
     - name: Create ingress-nginx namespace
       k8s:
         definition: "{{ lookup('file', '{{ ansible_dir }}/../../5.KOPS/03.kops_cluster_namespace.yaml') }}"
