--- a/4.ANSIBLE/1.PLAYBOOK_APPLY/10.playbook_copy_file_for_kops_cluster.yaml
+++ b/4.ANSIBLE/1.PLAYBOOK_APPLY/10.playbook_copy_file_for_kops_cluster.yaml
@@ -5,7 +5,7 @@
   tasks:
     - name: Create kops directory
       file:
-        path: /home/{{ ansible_user }}/infra/kops
+        path: "{{ KOPS_DIR }}"
         state: directory
 
     - name: Copy kubernetes cluster configuration file renderer to remote hosts
