--- a/4.ANSIBLE/1.PLAYBOOK_APPLY/11.playbook_kops_create_cluster.yaml
+++ b/4.ANSIBLE/1.PLAYBOOK_APPLY/11.playbook_kops_create_cluster.yaml
@@ -61,6 +61,7 @@
     - name: Set cluster exists fact
       set_fact:
         cluster_exists: "{{ cluster_exists.rc == 0 }}"
+      ignore_errors: yes
 
     - name: Create kubernetes cluster configuration file with template
       shell: |
