--- a/4.ANSIBLE/1.PLAYBOOK_APPLY/12.playbook_apply_cluster.yaml
+++ b/4.ANSIBLE/1.PLAYBOOK_APPLY/12.playbook_apply_cluster.yaml
@@ -14,6 +14,11 @@
 
   tasks:
   
+    - name: Apply Namespace YAML Files
+      community.kubernetes.k8s:
+        state: present
+        src: "{{ playbook_dir }}/../5.KOPS/03.kops_cluster_namespace.yaml"
+
     - name: Add Helm repo for NGINX Ingress Controller
       community.kubernetes.helm_repository:
         name: bitnami
@@ -25,28 +30,6 @@
         release_name: nginx-ingress
         chart_ref: bitnami/nginx-ingress-controller
         namespace: default  # or the appropriate namespace
+        values_files:
+          - values.yaml
         state: present
-
-    - name: Create ArgoCD Ingress
-      community.kubernetes.k8s:
-        definition:
-          apiVersion: networking.k8s.io/v1
-          kind: Ingress
-          metadata:
-            name: argocd-server-ingress
-            namespace: argocd
-            annotations:
-              kubernetes.io/ingress.class: nginx
-              nginx.ingress.kubernetes.io/rewrite-target: /
-          spec:
-            rules:
-              - host: "{{ argocd_domain }}"
-                http:
-                  paths:
-                    - pathType: Prefix
-                      path: /
-                      backend:
-                        service:
-                          name: argocd-server
-                          port:
-                            number: 80
