--- a/5.KOPS/04.helm-value-aws-alb-ingress-controller.yaml
+++ b/5.KOPS/04.helm-value-aws-alb-ingress-controller.yaml
@@ -4,5 +4,6 @@ controller:
     use-forwarded-headers: "true"
     use-proxy-protocol: "true"
   service:
+    enabled: true
     annotations:
       "service.beta.kubernetes.io/aws-load-balancer-type": "alb"
