--- a/4.ANSIBLE/1.PLAYBOOK_APPLY/11.playbook_kops_create_cluster.yaml
+++ b/4.ANSIBLE/1.PLAYBOOK_APPLY/11.playbook_kops_create_cluster.yaml
@@ -53,7 +53,7 @@
 
     - name: Check cluster existence
       shell: |
-        kops get cluster "{{ KOPS_CLUSTER_NAME }}"
+        kops get cluster
       register: cluster_exists
       ignore_errors: true
       changed_when: false
@@ -61,10 +61,6 @@
     - name: Set cluster exists fact
       set_fact:
         cluster_exists: "{{ cluster_exists.rc == 0 }}"
-
-    - name: Debug cluster_exists fact
-      debug:
-        var: cluster_exists
 
     - name: Create kubernetes cluster configuration file with template
       shell: |
