--- a/4.ANSIBLE/1.PLAYBOOK_APPLY/11.playbook_kops_create_cluster.yaml
+++ b/4.ANSIBLE/1.PLAYBOOK_APPLY/11.playbook_kops_create_cluster.yaml
@@ -88,6 +88,7 @@
       shell: |
         kops rolling-update cluster --yes
         kops rolling-update cluster --target {{ KOPS_CONF_YAML_FILE }} --yes --cloudonly
+      ignore_errors: true
       when: cluster_exists|default(false)
 
     - name: Validate kubernetes cluster
