--- a/4.ANSIBLE/1.PLAYBOOK_APPLY/10.playbook_copy_file_for_kops_cluster.yaml
+++ b/4.ANSIBLE/1.PLAYBOOK_APPLY/10.playbook_copy_file_for_kops_cluster.yaml
@@ -18,6 +18,14 @@
 
     - name: Copy kubernetes cluster configuration file renderer to remote hosts
       copy:
+        src: "{{ KOPS_TPL_RENDERER_PY_FILE }}"
+        dest: "{{ KOPS_DIR }}/{{ KOPS_TPL_RENDERER_PY_FILE_NAME }}"
+        owner: "{{ ansible_user }}"  # Optional: Set the owner of the file
+        group: "{{ ansible_user }}"  # Optional: Set the group of the file
+        mode: 0644  # Optional: Set the permissions of the file
+
+    - name: Copy kubernetes cluster configuration file renderer to remote hosts
+      copy:
         src: "{{ KOPS_TPL_J2_FILE }}"
         dest: "{{ KOPS_DIR }}/{{ KOPS_TPL_J2_FILE_NAME }}"
         owner: "{{ ansible_user }}"  # Optional: Set the owner of the file
