--- a/4.ANSIBLE/1.PLAYBOOK_APPLY/12.playbook_apply_cluster.yaml
+++ b/4.ANSIBLE/1.PLAYBOOK_APPLY/12.playbook_apply_cluster.yaml
@@ -15,7 +15,7 @@
   
     - name: Find all files in source directory
       find:
-        paths: "{{ KOPS_MANIFEST_YAML_DIR }}"
+        paths: "{{ K8S_MANIFEST_DIR }}"
         recurse: yes
         file_type: file
       register: files_to_copy
