--- a/.github/workflows/1.deploy_infrastructure.yaml
+++ b/.github/workflows/1.deploy_infrastructure.yaml
@@ -138,7 +138,7 @@ jobs:
           TF_VAR_KOPS_TPL_J2_FILE: "${{ env.INFRA_KOPS_TPL_J2_FILE }}"
           TF_VAR_KOPS_TPL_VALUE_JSON_FILE: "${{ env.INFRA_KOPS_TPL_VALUE_JSON_FILE }}"
           TF_VAR_KOPS_CONF_YAML_FILE: "${{ env.INFRA_KOPS_CONF_YAML_FILE }}"
-          TF_VAR_K8S_MANIFEST_DIR: "${{ env.INFRA_K8S_MANIFEST_DIR }}/"
+          TF_VAR_K8S_MANIFEST_DIR: "${{ env.INFRA_K8S_MANIFEST_DIR }}"
         run: |
           if [[ "${{ env.DEPLOY_MODE }}" == "${{ env.PROCESS_DEPLOY }}" ]]; then
             terraform validate
